Jann 30/objects/RFA__c.object
<CustomObject>
    <fields>
        <fullName>AREMonth__c</fullName>
        <inlineHelpText>The month used to calculate the ARE value for the  RFA.  The current month should be used as the ARE month regardless of the Expected Commitment Date of the RFA transaction.</inlineHelpText>
        <label>A.R.E. Month *</label>
        <picklist>
            <picklistValues>
                <fullName>Select ARE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Plan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ARERate__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>The RFA System will populate the A.R.E (Accounting Rate of Exchange) based on the most recent monthly rates issued by Corporate Treasury and uploaded into the RFA system by Capital Management.</inlineHelpText>
        <label>A.R.E. Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agents_Name__c</fullName>
        <label>Agents Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApprovalLetterComments__c</fullName>
        <inlineHelpText>Standard comments describing conditional approval requirements.</inlineHelpText>
        <label>Follow-up: Approver Comments/Conditions</label>
        <picklist>
            <picklistValues>
                <fullName>The requesting party must ensure appropriate coordination with the above approver(s) to fully address any and all approval conditions.  Any failure to fully address these conditions will be subject to Audit review.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The requesting party must fully comply with the above approval conditions, although explicit communication or follow up with these approvers is not required.  Any failure to fully address these conditions will be subject to Audit review.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <label>Approver Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BoardSubItem__c</fullName>
        <inlineHelpText>A field to be selected if the DOA requires subsidiary board or TCCC board approval.</inlineHelpText>
        <label>Board / Sub-board Item</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUB BOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCCC BOD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BottlerDiscPaybackPeriodYears__c</fullName>
        <inlineHelpText>The number of years it takes the bottler to break-even between the investment and the return using the bottler&apos;s WACC rate.</inlineHelpText>
        <label>Bottler Disc. Payback Period-Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BottlerIRR__c</fullName>
        <inlineHelpText>Internal Rate of Return of the bottler included in the transaction.</inlineHelpText>
        <label>Bottler IRR (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BottlerInvestmentDepreciationYears__c</fullName>
        <label>Bottler Investment Depreciation Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BottlerLocalEffectiveTaxRate__c</fullName>
        <inlineHelpText>Effective tax rate of the bottler involved in the transaction.</inlineHelpText>
        <label>Bottler Local Effective Tax Rate (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BottlerNPVUSD2__c</fullName>
        <inlineHelpText>Net present value calculated when analyzing return on investment.</inlineHelpText>
        <label>Bottler NPV (USD $)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BottlerNPVUSD__c</fullName>
        <formula>RequestAmountUSD__c  *  BottlerIRR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Net present value calculated when analyzing return on investment.</inlineHelpText>
        <label>Bottler NPV (USD $)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BottlerParticipationAmountFC__c</fullName>
        <inlineHelpText>The bottler&apos;s portion of the cost, as opposed to the Company.</inlineHelpText>
        <label>Bottler Participation Amount (FC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BottlerParticipationAmountUSD__c</fullName>
        <formula>BottlerParticipationAmountFC__c * ARERate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The bottler&apos;s portion of the cost, as opposed to the Company.</inlineHelpText>
        <label>Bottler Participation Amount (USD $)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BottlerParticipation__c</fullName>
        <inlineHelpText>The bottler&apos;s percentage portion of the cost, as opposed to the Company.</inlineHelpText>
        <label>Bottler Participation (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BottlerROINPVCAPPr__c</fullName>
        <formula>BottlerNPVUSD2__c/ BottlerParticipationAmountUSD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The bottler&apos;s portion of the return on investment.</inlineHelpText>
        <label>Bottler ROI (NPV/CAPPr %)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BottlerWACC__c</fullName>
        <inlineHelpText>Weighted average cost of capital for the bottler use for comparative purposes.</inlineHelpText>
        <label>Bottler WACC (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BudgetType__c</fullName>
        <inlineHelpText>Identifies the capital budget request (CPR) as &quot;formal&quot; or &quot;initial&quot; . Initial is only used when details are not complete, but enough details exist to request initial budget allocation. Not available for SPR requests.</inlineHelpText>
        <label>Budget Type *</label>
        <picklist>
            <picklistValues>
                <fullName>Formal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BusinessCaseGuideline__c</fullName>
        <defaultValue>&quot;The Business Case should be sufficient to gain management alignment and approval. To the extent necessary to expand on the Executive Summary include the following as relevant (Note: Certain items below are generally applicable to significant capital commitments and agreements such as mergers &amp; acquisitions, marketing, supply an purchase commitments, consulting, etc., but may not be relevant for more routine requests such as inventory adjustments, asset impairments, etc.)&quot; +BR()+BR()+

&quot;Objectives / Rationale/ Background&quot; +BR()+
&quot; - Describe objectives and rationale, including problem or opportunity we are solving and the proposed solution / desired outcome.&quot; + BR()+
&quot; - Describe background (include the Company history with this type of transaction, whether the transaction is a renewal, and experience with any relevant third parties.)&quot; +BR()+
&quot; - Describe the specific business request to be approved including terms.&quot; +BR()+BR()+

&quot;Cost Estimates&quot; +BR()+  
&quot; - Detail estimated costs and expenses, including OPEX, DME, and CAPEX.&quot; +BR()+
&quot; - Include key drivers for costs (e.g. additional people expense, fixed asset investment and external/third-party costs).&quot; +BR()+
&quot; - Describe any cost sharing arrangements with bottlers and other internal or external partners.&quot; +BR() +BR()+

&quot;Benefits, Financial Metrics and Assumptions&quot; +BR()+
&quot; - Describe strategic, business and qualitative benefits, including how 2020 Goals are enabled. Consider competitive advantage, volume/value share, per capita consumption, brand measures, social responsibility and the Company&apos;s 6P&apos;s (Profit, People, Portfolio, Partners, Planet and Productivity)&quot; +BR()+
&quot; - Describe other benefits, including cost reduction, risk avoidance, and legal/regulatory/quality compliance.&quot; +BR()+
&quot; - Provide an analysis of overall financial and economic impact (example, NPV/IRR, payback, and EP), including underlying assumptions.&quot; +BR() +BR()+

&quot;Risks and Alternatives&quot; +BR()+
&quot; - Describe business risks, including risks of inaction or delay. Outline specific risks and mitigating factors including those related to the 6P&apos;s as well as technology, complexity, operational business or timeline.&quot; +BR()+
&quot; - Explain alternative scenarios or solutions considered (financial and/or business) and the rationale for rejecting them in favor of recommended solution.&quot; +BR() +BR()+

&quot;Other Considerations&quot; +BR()+
&quot; - Describe accounting treatment for complex or unusual circumstances.&quot; +BR()+
&quot; - Include entity or individual that is specifically accountable for ensuring expected results.&quot; +BR()+
&quot; - Include implementation approach, timeline and milestones.&quot; +BR()+
&quot; - Describe unique circumstances (e.g. reference to other RFAs or projects, potential impacts on customers, partners, the Company&apos;s business model, etc.)&quot; +BR()+
&quot; - Describe funding or financing source&quot; +BR()+
&quot; - If the transaction exceeds 10 years in length, has forecasted contractual spend greater than $300mm, involves a Company board member or relatives, has the potential to significantly impact the brand/image of the Company, has unusual commercial terms or is a transaction that Company management would reasonably expect to have input into or approval rights over, document such conditions in the RFA and refer to DOA Section 16  &apos;Exceptional Transactions&apos; for additional guidance and approval requirements.&quot;</defaultValue>
        <inlineHelpText>Description of items that should be included in the business case, if relevant.</inlineHelpText>
        <label>Business Case Guideline</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BusinessCase__c</fullName>
        <inlineHelpText>An analysis of the transaction including objectives/background/rationale; cost estimates, benefits, financial metrics and assumptions; and risks and alternatives; and other items.  It can be entered directly into the RFA Database or can be attached.</inlineHelpText>
        <label>Business Case</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BusinessUnitApprovers__c</fullName>
        <inlineHelpText>The number of approvers at the Business Unit Circulation stage</inlineHelpText>
        <label>Business Unit Approvers</label>
        <summaryFilterItems>
            <field>RFAUserRole__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Approver</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>RFAUserRole__c.Level__c</field>
            <operation>equals</operation>
            <value>2. Business Unit</value>
        </summaryFilterItems>
        <summaryForeignKey>RFAUserRole__c.RFA__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>ProfitCenterNumber__r.Business_Unit_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCEmailAddressCM__c</fullName>
        <label>CCEmailAddressCM</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CC__c</fullName>
        <label>CC</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CO_CREATOR_Name__c</fullName>
        <label>CO-CREATOR Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CapitalExpenditureTotalFC__c</fullName>
        <label>Capital Expenditure Total (FC)</label>
        <summarizedField>Capital_Expenditure__c.Amount__c</summarizedField>
        <summaryForeignKey>Capital_Expenditure__c.RFA__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CapitalManagementAdministered__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A field to be selected by Capital Management for time sensitive RFAs which must be expedited through the approval process.  Therefore, these RFAs will not be included in RFA system metrics reporting.</inlineHelpText>
        <label>Capital Management Administered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CapitalizedInterestUSD__c</fullName>
        <inlineHelpText>Charged on projects which are greater than U.S. $500,000 and involve a preparation period of more than 3 months (see Standard Practices and Procedures manual, Bulletin 8.1).</inlineHelpText>
        <label>Capitalized Interest (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CashflowAnalysisYears__c</fullName>
        <inlineHelpText>The number of years used in the cash flow analysis.</inlineHelpText>
        <label>Cashflow Analysis Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CashflowYears__c</fullName>
        <label>Cashflow Years</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CirculationDate__c</fullName>
        <inlineHelpText>A date assigned automatically when the RFA is moved from “Draft” stage to a circulating stage. This field is used in RFA performance metrics.</inlineHelpText>
        <label>Circulation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Circulation_Date__c</fullName>
        <inlineHelpText>Circulation Date</inlineHelpText>
        <label>Circulation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CommentsConditions__c</fullName>
        <inlineHelpText>Text provided by approvers of approval condition that must be accomplished before transaction initiation.</inlineHelpText>
        <label>Comments/Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>A field used for Capital Management to capture comments concerning the RFA.  These comments will not be viewable by the RFA Creator or Approvers.  Example:  Explanation of why an RFA was closed.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_aboutr__c</fullName>
        <description>Comments About Expiration Date</description>
        <inlineHelpText>For Administrative Purposes Only.</inlineHelpText>
        <label>Expiration Date Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentsaboutExpectedCommitmentDate__c</fullName>
        <inlineHelpText>Explains the commitment action on the Expected Commitment Date and/or the  result of meeting/missing the date.  Example:
 - &quot;The last date we can commit without receiving a penalty&quot; or  &quot;The expected contract signing date.&quot;</inlineHelpText>
        <label>Comments about Expected Commitment Date</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompanyDiscountPaybackPeriodYears__c</fullName>
        <inlineHelpText>The number of years it takes to break-even between the investment and the return using a the Company&apos;s WACC rate.</inlineHelpText>
        <label>Company Discount Payback Period (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyIRR__c</fullName>
        <inlineHelpText>Internal Rate of Return calculated when analyzing the return of an investment.</inlineHelpText>
        <label>Company IRR (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CompanyInvestmentAmortizationYears__c</fullName>
        <label>Company Investment Amortization Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyLocalEffectiveTaxRate__c</fullName>
        <inlineHelpText>Effective tax rate provided by the Corporate Tax used in financial analysis.</inlineHelpText>
        <label>Company Local Effective Tax Rate (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CompanyNPVUSD2__c</fullName>
        <inlineHelpText>Net present value calculated when analyzing return on investment.</inlineHelpText>
        <label>Company NPV (USD $)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyNPVUSD__c</fullName>
        <formula>RequestAmountUSD__c  *  CompanyIRR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Net present value calculated when analyzing return on investment.</inlineHelpText>
        <label>Company NPV (USD $)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyParticipationAmountFC__c</fullName>
        <inlineHelpText>The Company&apos;s portion of the cost, as opposed to the bottler.</inlineHelpText>
        <label>Company Participation Amount (FC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyParticipationAmountUSD__c</fullName>
        <formula>CompanyParticipationAmountFC__c * ARERate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Company&apos;s portion of the cost, as opposed to the bottler.</inlineHelpText>
        <label>Company Participation Amount (USD $)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CompanyParticipation__c</fullName>
        <inlineHelpText>The Company&apos;s percentage portion of the cost, as opposed to the bottler.</inlineHelpText>
        <label>Company Participation (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CompanyROINPVCAPPr__c</fullName>
        <formula>CompanyNPVUSD2__c /  CompanyParticipationAmountUSD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Company&apos;s portion of the return on investment.</inlineHelpText>
        <label>Company ROI (NPV/CAPPr %)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CompanyWACC__c</fullName>
        <inlineHelpText>Weighted average cost of capital provided by Treasury to be used in the financial analysis.</inlineHelpText>
        <label>Company WACC (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CompletionDate__c</fullName>
        <inlineHelpText>The date the RFA was approved, rejected or closed.</inlineHelpText>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ControlNumLink__c</fullName>
        <formula>HYPERLINK (&quot;https://fina.my.salesforce.com/&quot; + Id, ControlNumber__c, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A unique identifier assigned automatically by the RFA system when the request is created and saved.</inlineHelpText>
        <label>Control #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ControlNumber__c</fullName>
        <inlineHelpText>A unique identifier will be assigned automatically by the RFA system when the request is created.</inlineHelpText>
        <label>Control Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorporateApprovers__c</fullName>
        <inlineHelpText>The number of approvers at the Corporate Circulation stage</inlineHelpText>
        <label>Corporate Approvers</label>
        <summaryFilterItems>
            <field>RFAUserRole__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Approver</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>RFAUserRole__c.Level__c</field>
            <operation>equals</operation>
            <value>4. Corporate</value>
        </summaryFilterItems>
        <summaryForeignKey>RFAUserRole__c.RFA__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CreatedByUser__c</fullName>
        <formula>IF(CreatedById = $User.Id , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedBy$User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DataClassificationNew__c</fullName>
        <formula>&quot;Confidential&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Note: Highly Restricted information cannot be entered into the sytem. If your request is Highly Restricted or contains Highly Restricted information please contact your Location Coordinator.</inlineHelpText>
        <label>Data Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataClassification__c</fullName>
        <inlineHelpText>Select the appropriate Data Classification for this request. Note: Highly Restricted information cannot be entered into the sytem. If your request is Highly Restricted  or contains Highly Restricted information please contact your Location Coordinator.</inlineHelpText>
        <label>Data Classification *</label>
        <picklist>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Use</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DaysinBusinessUnit__c</fullName>
        <formula>REP_DaysInBUPreCirculation__c + REP_DaysInBUCirculation__c + REP_DaysInBUPostCirculation__c</formula>
        <label>Days in Business Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysinCorporate__c</fullName>
        <formula>REP_DaysInCorporatePreCirculation__c + REP_DaysInCorporateCirculation__c + REP_DaysInCorporatePostCirculation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Corporate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysinExecutive__c</fullName>
        <formula>REP_DaysInPreExecutive__c + REP_DaysInExecutiveCirculation__c + REP_DaysInExecutivePostCirculation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Executive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysinGroup__c</fullName>
        <formula>REP_DaysInPreGroup__c + REP_DaysInGroup__c + REP_DaysInPostGroup__c</formula>
        <label>Days in Group</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysinKeyOperations__c</fullName>
        <formula>REP_DaysInPreKeyOps__c + REP_DaysInKeyOps__c +  REP_DaysInPostKeyOps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Key Operations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysinSeniorExecutive__c</fullName>
        <formula>REP_DaysInPreSeniorExecutive__c + REP_DaysInSeniorExecutive__c + REP_DaysInPostSeniorExecutive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Senior Executive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiscountedPaybackPeriodYears__c</fullName>
        <label>Discounted Payback Period (Years)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Downside_Discounted_Payback_Years__c</fullName>
        <label>Downside Discounted Payback (Years)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Downside_Internal_Rate_Of_Return__c</fullName>
        <label>Downside Internal Rate Of Return</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Downside_NPV_Investment__c</fullName>
        <label>Downside NPV/Investment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Downside_NPV_WACC__c</fullName>
        <label>Downside NPV@WACC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EconomicProfitUSD__c</fullName>
        <inlineHelpText>Income from continuing operations, after giving effect to taxes and excluding the effects of interest (commonly referred to as NOPAT), in excess of a computed capital charge for average operating capital employed.</inlineHelpText>
        <label>Economic Profit (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EquipmentPlacementPeriodYears__c</fullName>
        <inlineHelpText>The number of year equipment placement will occur.</inlineHelpText>
        <label>Equipment Placement Period (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExecutiveApprovers__c</fullName>
        <inlineHelpText>The number of approvers at the Executive Circulation stage</inlineHelpText>
        <label>Executive Approvers</label>
        <summaryFilterItems>
            <field>RFAUserRole__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Approver</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>RFAUserRole__c.Level__c</field>
            <operation>equals</operation>
            <value>5. Executive</value>
        </summaryFilterItems>
        <summaryForeignKey>RFAUserRole__c.RFA__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ExecutiveSummaryGuideline__c</fullName>
        <defaultValue>&quot;Provide a concise, high-level description of the requested transaction sufficient to allow an executive to make a well informed decision. Include the following to the extent relevant:&quot; +BR()+
&quot; - Key Objectives/ Background/ Rationale&quot; +BR()+
&quot; - Key Cost Estimates&quot; +BR()+
&quot; - Key Benefits, Financial Metrics and Assumptions&quot; +BR()+
&quot; - Key Risks and Alternatives&quot; +BR()+
&quot; - Key Other Considerations&quot; +BR()+BR()+

&quot;Also, include the following in the Executive Summary as relevant:&quot; +BR()+
&quot; - Describe the components of the RFA “request amount”.&quot; +BR()+
&quot; - Describe the reporting units (legal entities) impacted by this transaction. Include, as applicable, a description of how the transaction will be funded (e.g. capital contribution, inter-company loan) and how the funding will flow through the hierarchy of legal entities. Additionally, describe the current ownership structure (i.e. parents) of the legal entities involved and any impact to the ownership structure as a result of the transaction.&quot;</defaultValue>
        <label>Executive Summary Guideline</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExecutiveSummary__c</fullName>
        <label>Executive Summary *</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Executive_Summary1__c</fullName>
        <description>Rich Text area Field</description>
        <label>Executive Summary *</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ExpectedCommitmentDate__c</fullName>
        <inlineHelpText>The date of the Commitment, as defined by TCCC&apos;s DOA, is expected to be made.  For example, an agreement to be signed Feb. 1,  but with an effective date of 3 months later, the Expected Commitment Date is February 1.</inlineHelpText>
        <label>Expected Commitment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Discounted_Payback_Years__c</fullName>
        <label>Expected Discounted Payback (Years)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Internal_Rate_Of_Return__c</fullName>
        <label>Expected Internal Rate Of Return</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_NPV_Investment__c</fullName>
        <label>Expected NPV/Investment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_NPV_WACC__c</fullName>
        <label>Expected NPV@WACC</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Expiration Date</description>
        <inlineHelpText>Date by which compliance with company policy will be achieved and exemption will no longer be effective.</inlineHelpText>
        <label>Expiration Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCFormula__c</fullName>
        <formula>FunctionalCurrencyNameFC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Functional Currency (FC)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Impact_Guidelines__c</fullName>
        <label>Final Impact Guidelines</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Impact_Guidelines__c</fullName>
        <label>Financial Impact Guidelines</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Financial_Impact__c</fullName>
        <label>Financial Impact *</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <formula>&apos;test&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From</label>
        <type>Text</type>
    </fields>
</CustomObject>